--- a/app/src/main/res/layout/item_linea_ticket.xml
+++ b/app/src/main/res/layout/item_linea_ticket.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -23,7 +23,6 @@
             android:id="@+id/tvProducto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:textSize="22dp"
             android:textColor="@color/black"
@@ -44,7 +43,6 @@
         android:id="@+id/menos"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="15dp"
         android:backgroundTint="@color/purple_700"
         android:background="@drawable/ic_menos"/>
 
@@ -53,7 +51,6 @@
         android:layout_width="30dp"
         android:layout_height="match_parent"
         android:layout_weight="0.6"
-        android:layout_marginTop="15dp"
         android:textSize="22dp"
         android:textColor="@color/black"
         android:text="0"
@@ -62,7 +59,6 @@
         <ImageButton
         android:id="@+id/mas"
         android:layout_width="30dp"
-        android:layout_marginTop="15dp"
         android:layout_height="30dp"
         android:backgroundTint="@color/purple_700"
         android:background="@drawable/ic_mas"/>
@@ -70,7 +66,6 @@
         <ImageButton
         android:id="@+id/borrar"
         android:layout_width="30dp"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
         android:layout_height="30dp"
         android:backgroundTint="@color/red"
