--- a/app/src/main/res/layout/item_linea_ticket_cliente.xml
+++ b/app/src/main/res/layout/item_linea_ticket_cliente.xml
@@ -38,7 +38,8 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:text="Precio Unidad"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:gravity="end" />
 
         <TextView
             android:id="@+id/tvPrecioTotal"
@@ -47,7 +48,8 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:text="Total"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:gravity="end"/>
 
     </LinearLayout>
 
